
[package]
name = "imagor-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = "0.14.0"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
axum = "0.7.7"
color-eyre = "0.6.3"
libvips = "1.7.0"
